--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CammentAdsDemo</string>
+    <string name="banner_added_in_xml">Banner added in xml</string>
+    <string name="banner_added_dynamically">Banner added dynamically</string>
+    <string name="get_banner">Get banner</string>
 </resources>
